# CB1-Kernel

./: .buildconfig  .gitattributes  .gitignore  README.md  build.sh  packandcopy.sh
brandy/brandy-2.0/: build.sh
brandy/brandy-2.0/spl-pub/: .gitignore  .module.common.mk  Makefile  autoconf.mk
brandy/brandy-2.0/tools/: .gitignore  build.sh
brandy/brandy-2.0/u-boot-2018/: Kconfig  Makefile  make_nand
device/: product
device/config/rootfs_tar/: _device_table.txt  target_arm.tar.bz2
docs/DDR模板/H616_REF_DDR3_4X8_V1_0_4L/: PCB-Stackup_4L.xls
docs/DDR模板/H616_REF_LPDDR3_32X1_V1_0_4L/: H616_REF_LPDDR3_32X1_4L_V1_0.pcb  H616_REF_LPDDR3_32X1_4L_V1_0_20200108-v163.brd  H616_REF_LPDDR3_32X1_4L_V1_0_20200108.DSN
docs/DDR模板/H616_REF_LPDDR4_32X1_20200119/: H313_REF_LPDDR4_32X1-4L-200119-V163.brd  H313_REF_LPDDR4_32X1_20200119.asc  PCB-Stackup_4L.xls
docs/H616/: H616_H313_DRAM调试信息总览表-发给客户-2022-6-29.xlsx  hdmi1.4驱动添加分辨率步骤.doc
docs/Net-data/YT8531/: 添加内核驱动.pptx
docs/RTL8189FS_beta_v14_RTLWlan_1930.24.1201.2018/: readme.txt
docs/RTL8189FS_beta_v14_RTLWlan_1930.24.1201.2018/wpa_supplicant_hostapd/: hostapd_sae_sample.conf  how_to_make_wpa_supplicant.txt  wpa_sae_sample.conf
docs/YT8531/: linux-opensource.7z  裕太产品列表220324(1)(1).xlsx
docs/datasheet/RTL8189FS/: readme.txt
docs/datasheet/YT8531/: motorcomm-phy-Drivers_20210519.tar.xz
docs/原理图/: EST-H616-V1.0-20200520制板要求.doc
kernel/: .config  .config.old  README.md
kernel/drivers/i2c/: Kconfig  Makefile  i2c-gpio-base.c  i2c-gpio.c
kernel/drivers/input/: Kconfig  Makefile
kernel/drivers/leds/: leds-gpio.c
kernel/drivers/mfd/: ac200.c  axp20x-i2c.c  axp20x-rsb.c  axp20x.c  mfd-core.c
kernel/drivers/pwm/: pwm-sunxi-enhance.c  pwm-sunxi-new.c
kernel/drivers/ras/: Kconfig
kernel/drivers/regulator/: axp20x-regulator.c
kernel/drivers/w1/: Kconfig  Makefile  tempCodeRunnerFile.c  ws2812.c
kernel/include/linux/: i2c-gpio-base.h  phy.h  sunxi-sid.h
kernel/linux-4.9/: .config  .config.mark  .config.old  .gitignore  Makefile  Module.symvers  kandy_config_0730  kandy_config_0805  kandy_config_lcd_0905
kernel/linux-4.9/block/: modules.builtin
kernel/linux-4.9/crypto/: modules.builtin
kernel/linux-4.9/drivers/: modules.builtin
kernel/linux-4.9/fs/: modules.builtin
kernel/linux-4.9/init/: main.c
kernel/linux-4.9/kernel/: .config_data.gz.cmd  .configs.o.cmd
kernel/linux-4.9/lib/: modules.builtin
kernel/linux-4.9/mm/: memcontrol.c  modules.builtin
kernel/scripts/: checksyscalls.sh
kernel/sound/soc/: Kconfig  (+1 more)
nfs_folder/: linux-dtb-current-sun50iw9_2.1.2_arm64.deb  linux-dtb-current-sun50iw9_2.2.0_arm64.deb  linux-libc-dev_2.1.1_arm64.deb  linux-libc-dev_2.1.2_arm64.deb  linux-libc-dev_2.2.0_arm64.deb  linux-u-boot-current-h616_2.1.2_arm64.deb  update_kernel.sh
nfs_folder/5.16.17-sun50iw9/: modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.devname  modules.softdep  modules.symbols
rootfs_def/etc/: cedarc.conf  cedarx.conf  fstab  hostname  hosts  inittab  issue  localtime  profile  shells  wpa_supplicant.conf
rootfs_def/lib/: libatomic.so.1.2.0  libblkid.so.1.1.0  libgcc_s.so.1  libgfortran.so.4.0.0  libmount.so.1.1.0  libstdc++.so.6.0.24  libstdc++.so.6.0.24-gdb.py  libuuid.so.1.3.0
rootfs_def/sbin/: badblocks  dhclient  dhcpcd  dumpe2fs  e2freefrag  e2fsck  e2undo  e4crypt  filefrag  fsck  logsave  mke2fs  mklost+found  tune2fs
scripts/: chroot-buildpackages.sh  compilation.sh  configuration.sh  debootstrap.sh  distributions.sh  expand_rootfs_4_9.sh  general.sh  image-helpers.sh  main.sh  makeboarddeb.sh  pack-uboot.sh
test/dragonboard/: .gitignore
test/dragonboard/src/lib/salsa-lib-0.0.22/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  alsa.m4  alsa.pc  alsa.pc.in  config.status  configure  configure.ac  libtool
test/dragonboard/src/lib/salsa-lib-0.0.22/src/: Makefile  Makefile.am  Makefile.in  asound.h  asoundef.h  asoundlib-head.h  asoundlib-tail.h  asoundlib.h  async.c  cards.c  cards.lo  conf.h  control.c  control.h  control.lo  ctl_macros.h  ctl_types.h  error.h  global.h  hcontrol.c  hcontrol.h  hcontrol.lo  hctl_macros.h  hctl_types.h  hwdep.c  hwdep.h  hwdep_macros.h  hwdep_types.h  input.h  libsalsa.la  local.h  mixer.c  mixer.h  mixer.lo  mixer_macros.h  mixer_types.h  output.h  pcm.c  pcm.h  pcm.lo  (+21 more)
test/dragonboard/src/lib/salsa-lib-0.0.22/src/.deps/: cards.Plo  control.Plo  hcontrol.Plo  mixer.Plo  pcm.Plo  pcm_misc.Plo  pcm_params.Plo
test/dragonboard/src/lib/salsa-lib-0.0.22/src/.libs/: libsalsa.lai  libsalsa.so.0.0.1
toolchains/lib64/: libcc1.so.0.0.0
tools/: .gitignore
tools/tools_win/: OEMDataPacket_V108_20121227.rar  README.txt
u-boot/: .config  .config.old  .gitignore
u-boot/arch/: Kconfig
u-boot/cmd/: Kconfig  fdt.c  usb_mass_storage.c
u-boot/common/: Kconfig.boot
u-boot/configs/: Awsom_defconfig  Bananapi_defconfig  Lamobo_R1_defconfig  Linksprite_pcDuino3_defconfig  Mele_A1000_defconfig  Merrii_Hummingbird_A20_defconfig  Sinovoip_BPI_M3_defconfig  h616_defconfig  libretech_all_h3_cc_h2_plus_defconfig  libretech_all_h3_cc_h3_defconfig  libretech_all_h3_cc_h5_defconfig  libretech_all_h5_cc_h5_defconfig  nanopi_a64_defconfig  nanopi_duo2_defconfig  nanopi_duo_defconfig  nanopi_k1_plus_defconfig  nanopi_m1_defconfig  nanopi_m1_plus2_defconfig  nanopi_m1_plus_defconfig  nanopi_neo2_defconfig  nanopi_neo_air_defconfig  nanopi_neo_core2_defconfig  nanopi_neo_defconfig  nanopi_neo_plus2_defconfig  orangepi_zero2_defconfig  pine64-lts_defconfig  pine64_plus_defconfig  pine_h64_defconfig  sunvell_r69_defconfig  zeropi_defconfig
u-boot/doc/: README.rockchip
u-boot/dts/: Kconfig
u-boot/include/: axp1530.h  axp_pmic.h  config_distro_bootcmd.h
userpatches/: arm64.conf  armhf.conf  config-build.conf  customize-image.sh  ex_rootfs.sh  h616_hdmi.deb  h616_tft.deb  reconnect_wifi.sh  sun50iw9.conf  sunxi.txt  sunxi64_common.inc  system.cfg
userpatches/boot/: system.cfg
userpatches/scripts/: auto_brightness  ex_rootfs.sh  reconnect_wifi.sh  set_rgb  sound.sh  system.cfg  vibrationsound.sh
(+4261 files in other folders)
